# NeuroGait

./: .gitignore  NeuroGait_guide.md  README.md  eval_metrics.py  pyproject.toml  train_nav.py
NeuroGait_Guides/: neurogait_demo_checkpoints.html  neurogait_full_stack_pipeline.html  neurogait_hybrid_architecture.html
NeuroGait_Guides/harsimran_guide/: neurogait_teammate_handoff.md
configs/: config.yaml
configs/agent/: ppo.yaml  sac.yaml  skrl_nav_ppo_cfg.yaml  td3.yaml
configs/communication/: gat.yaml
configs/logger/: default.yaml
configs/robot/: go2.yaml
docs/: _build_docx.py  cp5_to_cp65_understanding.docx
maps/: cp5_trajectory.csv  global_grid.npy  path_waypoints.csv
neurogait/: __init__.py  eval.py  train.py
neurogait/agents/: __init__.py  base_agent.py  dual_policy.py  ppo_agent.py  sac_agent.py  td3_agent.py
neurogait/communication/: __init__.py  gat_net.py  memory.py  transfer.py
neurogait/envs/: __init__.py  navigation_env.py  observations.py  wrappers.py
neurogait/perception/: __init__.py  costmap.py  occupancy.py
neurogait/planning/: __init__.py  planner.py
neurogait/utils/: __init__.py  heads.py  metrics.py  pareto.py  rewards.py
scripts/: compare_cp4_cp5.py  list_envs.py  play_cp4.py  play_cp5.py  random_agent.py  test_reward_scales.py  train.py  train_nav.py  visualize_perception.py  zero_agent.py
scripts/cp5/: compare_cp4_cp5.py  export_locomotion.py  play.py  test_reward_scales.py  train.py  (+1 more)
tests/: __init__.py  test_agents.py  test_metaheuristics.py  test_observations.py  test_perception.py  test_planning.py
(+109 files in other folders)
