# d:/CAPSTONE/Navigation/pyproject.toml
[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurogait"
version = "1.0.0"
description = "Hierarchical legged navigation pipeline for Unitree Go2 with IsaacLab and skrl"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ETH Zurich Legged Robotics Researchers"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "gymnasium>=0.29.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "tensorboard>=2.14.0"
]

[project.optional-dependencies]
rl = [
    "skrl>=1.1.0"
]
sim = [
    "omni-isaac-lab"
]

[tool.setuptools.packages.find]
include = ["neurogait*"]
